* https://github.com/devonfw/IDEasy/issues/1110[#1110]: ide status fails with IllegalStateException when offline
* https://github.com/devonfw/IDEasy/issues/1039[#1039]: Update Jasypt commandlet implementation to run Java version from dependencies.json
* https://github.com/devonfw/IDEasy/issues/1138[#1138]: Duplicated variables in configuration logs a clear warning and do not prevent merge anymore

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/24?closed=1[milestone 2025.03.002].

== 2025.03.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1111[#1111]: MSI Installer hangs because it does not create .license.agreement
* https://github.com/devonfw/IDEasy/issues/910[#910]: Cannot update Intellij on Linux - FileAlreadyExistsException
* https://github.com/devonfw/IDEasy/issues/654[#654]: Improve plugin support
* https://github.com/devonfw/IDEasy/issues/38[#38]: Implement ToolCommandlet for Python
* https://github.com/devonfw/IDEasy/issues/740[#740]: Create devonfw-ide to IDEasy settings migration guide

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/23?closed=1[milestone 2025.03.001].

== 2025.02.002

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/420[#420]: Add MSI Build and Deployment
* https://github.com/devonfw/IDEasy/issues/1061[#1061]: Mac: no such file or directory: /_ide/installation/functions
* https://github.com/devonfw/IDEasy/issues/789[#789]: Add support to uninstall
* https://github.com/devonfw/IDEasy/issues/1065[#1065]: NullPointerException in MavenRepository.getDownloadedArtifact
* https://github.com/devonfw/IDEasy/issues/1060[#1060]: Command "ide status" doesn't show information about a pending upgrade when started outside of project

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/22?closed=1[milestone 2025.02.002].
